--- a/Template/index/style.index.css
+++ b/Template/index/style.index.css
@@ -28,7 +28,7 @@
 	color: #ABD099;	
 }
 @media (max-width: 830px) {
-  #last-sensor-value {
+  #last-sensor-value-1 {
     font-size: 6em;
   }
   .parameter-info{
